# fastapi-qr-generator

./: .gitignore  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7dfa532760f3_initial_tables.py
backend/app/: main.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  api_key.py  base.py  qr_code.py  user.py
backend/scripts/: verify_db.py
backend/tests/api/: test_health.py
docs/: API-SPECIFICATION.md  DATA-DESIGN.md  DEPLOYMENT-PLAN.md  EDGE-CASE-MATRIX.md  EDR.md  PTD.md  README.md  SECURITY-DESIGN.md  TESTING-PLAN.md
docs/ADR/: ADR-001-api-framework.md  ADR-002-database-selection.md  ADR-003-qr-generation-library.md  ADR-004-authentication-strategy.md  ADR-005-storage-strategy.md  ADR-006-dynamic-qr-implementation.md  ADR-007-image-processing.md  README.md
