[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.4",
    "fastapi>=0.128.0",
    "passlib>=1.7.4",
    "pillow>=12.1.0",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "qrcode>=8.2",
    "redis>=7.1.0",
    "segno>=1.6.6",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
